--- a/client.htm
+++ b/client.htm
@@ -275,16 +275,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-140653.htm" title="深度解析：Quantumult中间按钮消失的全面解决方案">深度解析：Quantumult中间按钮消失的全面解决方案</a></li>
-                        <li class="py-2"><a href="/news/article-144879.htm" title="解密Clash小姐姐：新一代智能代理工具的全方位指南与深度评测">解密Clash小姐姐：新一代智能代理工具的全方位指南与深度评测</a></li>
-                        <li class="py-2"><a href="/news/article-140293.htm" title="全面指南：如何根据需求选择最适合的Clash版本">全面指南：如何根据需求选择最适合的Clash版本</a></li>
-                        <li class="py-2"><a href="/news/article-147078.htm" title="突破网络边界：谷歌科学上网扩展完全使用手册">突破网络边界：谷歌科学上网扩展完全使用手册</a></li>
-                        <li class="py-2"><a href="/news/article-133136.htm" title="解密Clash V2的"钢铁之躯"：深度剖析代理工具的稳定性与抗压能力">解密Clash V2的"钢铁之躯"：深度剖析代理工具的稳定性与抗压能力</a></li>
-                        <li class="py-2"><a href="/news/article-142372.htm" title="突破网络边界：flyzy小站科学上网全攻略与深度体验">突破网络边界：flyzy小站科学上网全攻略与深度体验</a></li>
-                        <li class="py-2"><a href="/news/article-139233.htm" title="宝塔面板与V2Ray完美共存：一站式服务器代理解决方案深度解析">宝塔面板与V2Ray完美共存：一站式服务器代理解决方案深度解析</a></li>
-                        <li class="py-2"><a href="/news/article-146705.htm" title="突破网络边界：二师兄科学上网工具全方位使用指南与深度解析">突破网络边界：二师兄科学上网工具全方位使用指南与深度解析</a></li>
-                        <li class="py-2"><a href="/news/article-143789.htm" title="彻底解决v2ray PAC失效难题：从原理到实战的完整指南">彻底解决v2ray PAC失效难题：从原理到实战的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-132128.htm" title="SSR与V2Ray深度对比：从技术原理到实战选择的终极指南">SSR与V2Ray深度对比：从技术原理到实战选择的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-141698.htm" title="洋葱之力：用Tor浏览器突破网络封锁的终极指南">洋葱之力：用Tor浏览器突破网络封锁的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-148513.htm" title="安卓V2Ray大陆访问困境：技术解析与突破之道">安卓V2Ray大陆访问困境：技术解析与突破之道</a></li>
+                        <li class="py-2"><a href="/news/article-138908.htm" title="斐讯K2路由器与Clash的深度整合：打造智能高效的网络体验新境界">斐讯K2路由器与Clash的深度整合：打造智能高效的网络体验新境界</a></li>
+                        <li class="py-2"><a href="/news/article-140705.htm" title="掌握Vmess协议：从零开始配置与优化完整指南">掌握Vmess协议：从零开始配置与优化完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-131536.htm" title="Steam访问受限？科学上网全攻略：解锁全球游戏库的终极指南">Steam访问受限？科学上网全攻略：解锁全球游戏库的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-136773.htm" title="突破网络壁垒：全方位科学上网指南助你畅游Google">突破网络壁垒：全方位科学上网指南助你畅游Google</a></li>
+                        <li class="py-2"><a href="/news/article-139989.htm" title="光影与空间的博弈：揭秘3D设计中'bump'与'clash'的核心差异与协同价值">光影与空间的博弈：揭秘3D设计中'bump'与'clash'的核心差异与协同价值</a></li>
+                        <li class="py-2"><a href="/news/article-145296.htm" title="从入门到精通：全面掌握Vmess链接转码的核心技术与实践指南">从入门到精通：全面掌握Vmess链接转码的核心技术与实践指南</a></li>
+                        <li class="py-2"><a href="/news/article-142054.htm" title="制霸部落冲突：从青铜到传奇的阶梯攀升终极指南">制霸部落冲突：从青铜到传奇的阶梯攀升终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-144568.htm" title="突破网络限制：Shadowrocket免费节点二维码获取与使用终极指南">突破网络限制：Shadowrocket免费节点二维码获取与使用终极指南</a></li>
                     </ul>
     </div>
 </div>
@@ -296,7 +296,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">19</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
