--- a/date/2025-08/page-3.htm
+++ b/date/2025-08/page-3.htm
@@ -2,7 +2,7 @@
 <html xml:lang="zh-CN" lang="zh-CN">
 
 <head>
-    	<link rel="canonical" href="https://vpnbaike.github.io/news/page-3.htm" />
+    	<link rel="canonical" href="https://vpnbaike.github.io" />
 	<!-- basic -->
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,14 +11,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1">
 	<!-- site metas -->
-	<title>新闻资讯 - VPN百科 订阅教程网 - 第4页</title>
+	<title>2025-08归档 - 第2页 - VPN百科 订阅教程网</title>
+		<meta name="keywords" content="2025-08归档VPN百科 订阅教程网" />
+		<meta name="description" content="2025-08归档，当前是第2页" />
 	
     <meta name="author" content="VPN百科 订阅教程网">
     <meta property="og:type" content="webpage" />
-    <meta property="og:url" content="https://vpnbaike.github.io/news/page-3.htm" />
+    <meta property="og:url" content="https://vpnbaike.github.io" />
     <meta property="og:site_name" content="VPN百科 订阅教程网" />
-    <meta property="og:title" content="新闻资讯 - VPN百科 订阅教程网 - 第4页" />
+    <meta property="og:title" content="2025-08归档 - 第2页 - VPN百科 订阅教程网" />
     <meta property="og:image" content="/assets/website/img/clashnodesfree/favicon.ico" />
+        <meta property="og:description" content="2025-08归档，当前是第2页" />
         
 	<!-- bootstrap css -->
 	<link rel="stylesheet" type="text/css" href="/assets/website/css/clashnodesfree/bootstrap.min.css">
@@ -43,7 +46,7 @@
     <meta name="robots" content="max-image-preview:large" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="新闻资讯 - VPN百科 订阅教程网 - 第4页">
+    <meta name="apple-mobile-web-app-title" content="2025-08归档 - 第2页 - VPN百科 订阅教程网">
     <meta name="format-detection" content="telephone=no">
 
     <link rel="dns-prefetch" href="https:/www.googletagmanager.com">
@@ -99,12 +102,12 @@
         <div class="container">
             <div class="breadcrumb">
               <a href="/">首页</a> / 
-              <span>新闻资讯</span>
+              <span>2025-08 归档</span>
             </div>
 
             <div class="row">
                 <div class="col-sm-12">
-                    <h1 class="services_taital mb-5">新闻资讯</h1>
+                    <h1 class="services_taital mb-5">2025-08 归档</h1>
                 </div>
             </div>
             <div class="row">
@@ -169,98 +172,8 @@
                             <p class="about_text">在当今高度互联的数字时代，网络连接质量直接影响着我们的在线体验。无论是激烈的多人在线游戏、高清视频会议，还是流畅的即时通讯，都依赖于稳定高效的网络连接。而在这背后，NAT（网络地址转换）类型扮演着关键</p>
                         </div>
                     </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-07-31">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/news/article-139989.htm" title="光影与空间的博弈：揭秘3D设计中'bump'与'clash'的核心差异与协同价值" class="xcblog-blog-url">
-                                    <img src="/uploads/20240731/3b772637bed7446e379aa6498eda093c.webp" alt="光影与空间的博弈：揭秘3D设计中'bump'与'clash'的核心差异与协同价值">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/news/article-139989.htm" title="光影与空间的博弈：揭秘3D设计中'bump'与'clash'的核心差异与协同价值" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">光影与空间的博弈：揭秘3D设计中'bump'与'clash'的核心差异与协同价值</h3>
-                            </a>
-                            <p class="about_text">在数字创作的世界里，每一个专业术语背后都隐藏着改变设计范式的力量。当我们谈论3D建模与程序设计的精妙之处时，"bump"与"clash"这两个看似简单的词汇，实则是构建虚拟与现实桥梁的关键技术支柱。它</p>
-                        </div>
-                    </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-07-30">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/news/article-139633.htm" title="韩国网络自由指南：Clash地址获取与配置全攻略" class="xcblog-blog-url">
-                                    <img src="/uploads/20240731/356abe308237bd1398a3f173d75cb408.webp" alt="韩国网络自由指南：Clash地址获取与配置全攻略">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/news/article-139633.htm" title="韩国网络自由指南：Clash地址获取与配置全攻略" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">韩国网络自由指南：Clash地址获取与配置全攻略</h3>
-                            </a>
-                            <p class="about_text">在当今高度互联的世界中，互联网已成为人们获取信息、沟通交流的重要渠道。然而，不同国家和地区的网络政策差异，使得部分用户面临着网络访问受限的困扰。韩国作为全球网络基础设施最发达的国家之一，却也存在着一定</p>
-                        </div>
-                    </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-07-29">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/news/article-139282.htm" title="深度指南：从零搭建v2ray搬瓦工代理的完整方案与实战技巧" class="xcblog-blog-url">
-                                    <img src="/uploads/20240731/89d1182bffd3d4974c89781cb3d536bd.webp" alt="深度指南：从零搭建v2ray搬瓦工代理的完整方案与实战技巧">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/news/article-139282.htm" title="深度指南：从零搭建v2ray搬瓦工代理的完整方案与实战技巧" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">深度指南：从零搭建v2ray搬瓦工代理的完整方案与实战技巧</h3>
-                            </a>
-                            <p class="about_text">引言：数字时代的隐私盾牌  当全球互联网监管日益收紧，网络流量分析技术不断升级，传统VPN已难以满足高阶用户需求。v2ray作为新一代代理工具的代表，以其模块化设计和协议伪装能力，正在重塑隐私保护的边</p>
-                        </div>
-                    </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-07-28">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/news/article-138908.htm" title="斐讯K2路由器与Clash的深度整合：打造智能高效的网络体验新境界" class="xcblog-blog-url">
-                                    <img src="/uploads/20240731/8385911316e65f18f95610af44d653f1.webp" alt="斐讯K2路由器与Clash的深度整合：打造智能高效的网络体验新境界">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/news/article-138908.htm" title="斐讯K2路由器与Clash的深度整合：打造智能高效的网络体验新境界" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">斐讯K2路由器与Clash的深度整合：打造智能高效的网络体验新境界</h3>
-                            </a>
-                            <p class="about_text">引言：当高性价比硬件遇上强大代理工具  在当今数字化生活中，稳定高效的网络连接已成为刚需。斐讯K2路由器以其出色的性价比和稳定的性能赢得了众多用户的青睐，而Clash作为一款功能强大的代理工具，能够有</p>
-                        </div>
-                    </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-07-27">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/news/article-138500.htm" title="荣耀 Clash 深度攻略：从入门到精通的战略艺术" class="xcblog-blog-url">
-                                    <img src="/uploads/20240731/abb6b91f60d1692b85e4fbc5e4912b74.webp" alt="荣耀 Clash 深度攻略：从入门到精通的战略艺术">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/news/article-138500.htm" title="荣耀 Clash 深度攻略：从入门到精通的战略艺术" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">荣耀 Clash 深度攻略：从入门到精通的战略艺术</h3>
-                            </a>
-                            <p class="about_text">引言：当卡牌遇上即时战略  在移动游戏领域，荣耀 Clash 以其独特的"卡牌收集+实时对战"玩法脱颖而出。这款游戏绝非简单的数值比拼，而是要求玩家在指尖方寸间运筹帷幄——既要像棋手般预判三步，又需如</p>
-                        </div>
-                    </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-07-26">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/news/article-138199.htm" title="解锁网络自由：Shadowrocket全方位配置与使用指南" class="xcblog-blog-url">
-                                    <img src="/uploads/20240731/89d1182bffd3d4974c89781cb3d536bd.webp" alt="解锁网络自由：Shadowrocket全方位配置与使用指南">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/news/article-138199.htm" title="解锁网络自由：Shadowrocket全方位配置与使用指南" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">解锁网络自由：Shadowrocket全方位配置与使用指南</h3>
-                            </a>
-                            <p class="about_text">在当今数字时代，网络隐私与自由访问已成为刚需。无论是规避地域限制、保护数据传输安全，还是优化网络体验，一款高效的代理工具必不可少。而Shadowrocket作为iOS平台上的明星级代理应用，凭借其灵活</p>
-                        </div>
-                    </div>
                                         
-                    <ul class="pagination"><li><a href="/news/page-2.htm">&laquo;</a></li> <li><a href="/news/">1</a></li><li><a href="/news/page-2.htm">2</a></li><li class="active"><span>3</span></li><li><a href="/news/page-4.htm">4</a></li><li><a href="/news/page-5.htm">5</a></li> <li><a href="/news/page-4.htm">&raquo;</a></li></ul>                </div>
+                    <ul class="pagination"><li><a href="/date/2025-08/page-2.htm">&laquo;</a></li> <li><a href="/date/2025-08/">1</a></li><li><a href="/date/2025-08/page-2.htm">2</a></li><li class="active"><span>3</span></li> <li class="disabled"><span>&raquo;</span></li></ul>                </div>
                 <div class="col-md-3">
                     <div class="panel panel-default">
     <div class="panel-heading">
@@ -268,16 +181,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-148513.htm" title="安卓V2Ray大陆访问困境：技术解析与突破之道">安卓V2Ray大陆访问困境：技术解析与突破之道</a></li>
-                        <li class="py-2"><a href="/news/article-132698.htm" title="小米科学上网标志全解析：从图标含义到高阶配置指南">小米科学上网标志全解析：从图标含义到高阶配置指南</a></li>
                         <li class="py-2"><a href="/news/article-134808.htm" title="深度解析Shadowrocket免流规则：从原理到实践的全方位指南">深度解析Shadowrocket免流规则：从原理到实践的全方位指南</a></li>
-                        <li class="py-2"><a href="/news/article-136773.htm" title="突破网络壁垒：全方位科学上网指南助你畅游Google">突破网络壁垒：全方位科学上网指南助你畅游Google</a></li>
-                        <li class="py-2"><a href="/news/article-140705.htm" title="掌握Vmess协议：从零开始配置与优化完整指南">掌握Vmess协议：从零开始配置与优化完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-137842.htm" title="新南威尔士大学课程冲突管理神器：UNSW Clash Form 深度解析与实战指南">新南威尔士大学课程冲突管理神器：UNSW Clash Form 深度解析与实战指南</a></li>
-                        <li class="py-2"><a href="/news/article-138199.htm" title="解锁网络自由：Shadowrocket全方位配置与使用指南">解锁网络自由：Shadowrocket全方位配置与使用指南</a></li>
-                        <li class="py-2"><a href="/news/article-142054.htm" title="制霸部落冲突：从青铜到传奇的阶梯攀升终极指南">制霸部落冲突：从青铜到传奇的阶梯攀升终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-148153.htm" title="彻底解决Clash更新难题：从故障排查到完美修复的全方位指南">彻底解决Clash更新难题：从故障排查到完美修复的全方位指南</a></li>
+                        <li class="py-2"><a href="/news/article-147128.htm" title="解锁网络自由：Shadowrocket节点捷径的终极配置指南与隐私保护艺术">解锁网络自由：Shadowrocket节点捷径的终极配置指南与隐私保护艺术</a></li>
+                        <li class="py-2"><a href="/news/article-144206.htm" title="全面掌握Clash小剧场：从入门到精通的完整指南与深度解析">全面掌握Clash小剧场：从入门到精通的完整指南与深度解析</a></li>
+                        <li class="py-2"><a href="/news/article-138500.htm" title="荣耀 Clash 深度攻略：从入门到精通的战略艺术">荣耀 Clash 深度攻略：从入门到精通的战略艺术</a></li>
+                        <li class="py-2"><a href="/news/article-132698.htm" title="小米科学上网标志全解析：从图标含义到高阶配置指南">小米科学上网标志全解析：从图标含义到高阶配置指南</a></li>
+                        <li class="py-2"><a href="/news/article-148513.htm" title="安卓V2Ray大陆访问困境：技术解析与突破之道">安卓V2Ray大陆访问困境：技术解析与突破之道</a></li>
                         <li class="py-2"><a href="/news/article-143838.htm" title="全面解析：Clash 电脑版32位下载安装与配置全攻略">全面解析：Clash 电脑版32位下载安装与配置全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-141062.htm" title="Shadowrocket连接故障全解析：从诊断到修复的完整指南">Shadowrocket连接故障全解析：从诊断到修复的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-132249.htm" title="深度解析：v2rayng无法上网的十大原因及全方位解决方案">深度解析：v2rayng无法上网的十大原因及全方位解决方案</a></li>
+                        <li class="py-2"><a href="/news/article-142776.htm" title="全面掌握Shadowrocket安卓版：从零开始打造安全高效的代理环境">全面掌握Shadowrocket安卓版：从零开始打造安全高效的代理环境</a></li>
                     </ul>
     </div>
 </div>
