--- a/disclaimer.htm
+++ b/disclaimer.htm
@@ -138,16 +138,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-145245.htm" title="英雄联盟玩家必备：LOL科学上网全攻略与深度解析">英雄联盟玩家必备：LOL科学上网全攻略与深度解析</a></li>
-                        <li class="py-2"><a href="/news/article-143076.htm" title="掌握Quantumult X的图片处理艺术：从基础配置到高阶玩法全解析">掌握Quantumult X的图片处理艺术：从基础配置到高阶玩法全解析</a></li>
-                        <li class="py-2"><a href="/news/article-140653.htm" title="深度解析：Quantumult中间按钮消失的全面解决方案">深度解析：Quantumult中间按钮消失的全面解决方案</a></li>
-                        <li class="py-2"><a href="/news/article-131433.htm" title="Clash代理流量消耗全解析：原理、影响因素与高效使用指南">Clash代理流量消耗全解析：原理、影响因素与高效使用指南</a></li>
-                        <li class="py-2"><a href="/news/article-147078.htm" title="突破网络边界：谷歌科学上网扩展完全使用手册">突破网络边界：谷歌科学上网扩展完全使用手册</a></li>
-                        <li class="py-2"><a href="/news/article-132128.htm" title="SSR与V2Ray深度对比：从技术原理到实战选择的终极指南">SSR与V2Ray深度对比：从技术原理到实战选择的终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-140293.htm" title="全面指南：如何根据需求选择最适合的Clash版本">全面指南：如何根据需求选择最适合的Clash版本</a></li>
-                        <li class="py-2"><a href="/news/article-132867.htm" title="手机端高效翻墙指南：V2Ray科学上网全攻略">手机端高效翻墙指南：V2Ray科学上网全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-133136.htm" title="解密Clash V2的"钢铁之躯"：深度剖析代理工具的稳定性与抗压能力">解密Clash V2的"钢铁之躯"：深度剖析代理工具的稳定性与抗压能力</a></li>
-                        <li class="py-2"><a href="/news/article-134758.htm" title="制霸魔法大陆：《Clash火龙》深度攻略与战术全解">制霸魔法大陆：《Clash火龙》深度攻略与战术全解</a></li>
+                        <li class="py-2"><a href="/news/article-134808.htm" title="深度解析Shadowrocket免流规则：从原理到实践的全方位指南">深度解析Shadowrocket免流规则：从原理到实践的全方位指南</a></li>
+                        <li class="py-2"><a href="/news/article-143481.htm" title="解锁全球网络自由：手把手教你轻松添加V2Ray订阅">解锁全球网络自由：手把手教你轻松添加V2Ray订阅</a></li>
+                        <li class="py-2"><a href="/news/article-144568.htm" title="突破网络限制：Shadowrocket免费节点二维码获取与使用终极指南">突破网络限制：Shadowrocket免费节点二维码获取与使用终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-133156.htm" title="安卓科学上网全攻略：从入门到精通的高级配置指南">安卓科学上网全攻略：从入门到精通的高级配置指南</a></li>
+                        <li class="py-2"><a href="/news/article-137842.htm" title="新南威尔士大学课程冲突管理神器：UNSW Clash Form 深度解析与实战指南">新南威尔士大学课程冲突管理神器：UNSW Clash Form 深度解析与实战指南</a></li>
+                        <li class="py-2"><a href="/news/article-142776.htm" title="全面掌握Shadowrocket安卓版：从零开始打造安全高效的代理环境">全面掌握Shadowrocket安卓版：从零开始打造安全高效的代理环境</a></li>
+                        <li class="py-2"><a href="/news/article-135516.htm" title="路由器配置v2ray却无法访问Netflix？深度解析与完美解决方案">路由器配置v2ray却无法访问Netflix？深度解析与完美解决方案</a></li>
+                        <li class="py-2"><a href="/news/article-139989.htm" title="光影与空间的博弈：揭秘3D设计中'bump'与'clash'的核心差异与协同价值">光影与空间的博弈：揭秘3D设计中'bump'与'clash'的核心差异与协同价值</a></li>
+                        <li class="py-2"><a href="/news/article-144931.htm" title="战地1网络优化全攻略：科学上网助你告别卡顿，畅享极致对战体验">战地1网络优化全攻略：科学上网助你告别卡顿，畅享极致对战体验</a></li>
+                        <li class="py-2"><a href="/news/article-146391.htm" title="科学上网与全球主机服务器建站完全指南：从入门到精通">科学上网与全球主机服务器建站完全指南：从入门到精通</a></li>
                     </ul>
     </div>
 </div>
@@ -159,7 +159,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">19</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
