mo you xi shou ji wan zhu ji 3A da zuo yong PC wai she wan shou ji you xi shou ji xiao ping mu

--- a/client.htm
+++ b/client.htm
@@ -72,7 +72,7 @@
         <div class="container-fluid">
                         <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="logo">
-                                        <a href="/">VPN百科</a>
+                                        <a href="/">VPN百科资源库</a>
                                     </div>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -278,16 +278,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2"><a href="/news/article-143838.htm" title="全面解析：Clash 电脑版32位下载安装与配置全攻略">全面解析：Clash 电脑版32位下载安装与配置全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-148153.htm" title="彻底解决Clash更新难题：从故障排查到完美修复的全方位指南">彻底解决Clash更新难题：从故障排查到完美修复的全方位指南</a></li>
+                        <li class="py-2"><a href="/news/article-147436.htm" title="Quantumult与Shadow深度评测：科学上网工具如何选？">Quantumult与Shadow深度评测：科学上网工具如何选？</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-9-free-node-subscribe.htm" title="VPN百科 - 9月9日22.4M/S|免费V2ray/Clash/SSR/Shadowrocket订阅节点分享">VPN百科 - 9月9日22.4M/S|免费V2ray/Clash/SSR/Shadowrocket订阅节点分享</a></li>
                         <li class="py-2"><a href="/news/article-144206.htm" title="全面掌握Clash小剧场：从入门到精通的完整指南与深度解析">全面掌握Clash小剧场：从入门到精通的完整指南与深度解析</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-12-free-vpn-node.htm" title="VPN百科 - 9月12日21.2M/S|免费SSR/Clash/Shadowrocket/V2ray订阅节点分享">VPN百科 - 9月12日21.2M/S|免费SSR/Clash/Shadowrocket/V2ray订阅节点分享</a></li>
-                        <li class="py-2"><a href="/news/article-146757.htm" title="突破网络边界：手机与电脑科学上网的终极指南">突破网络边界：手机与电脑科学上网的终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-144931.htm" title="战地1网络优化全攻略：科学上网助你告别卡顿，畅享极致对战体验">战地1网络优化全攻略：科学上网助你告别卡顿，畅享极致对战体验</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-31-free-vpn.htm" title="VPN百科 - 8月31日18.7M/S|免费SSR/Shadowrocket/V2ray/Clash订阅节点分享">VPN百科 - 8月31日18.7M/S|免费SSR/Shadowrocket/V2ray/Clash订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-4-vpn-github.htm" title="VPN百科 - 9月4日23M/S|免费V2ray/Shadowrocket/SSR/Clash订阅节点分享">VPN百科 - 9月4日23M/S|免费V2ray/Shadowrocket/SSR/Clash订阅节点分享</a></li>
-                        <li class="py-2"><a href="/news/article-143481.htm" title="解锁全球网络自由：手把手教你轻松添加V2Ray订阅">解锁全球网络自由：手把手教你轻松添加V2Ray订阅</a></li>
-                        <li class="py-2"><a href="/news/article-148513.htm" title="安卓V2Ray大陆访问困境：技术解析与突破之道">安卓V2Ray大陆访问困境：技术解析与突破之道</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-8-node-share-links.htm" title="VPN百科 - 9月8日21.3M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点分享">VPN百科 - 9月8日21.3M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-7-vpn-free.htm" title="VPN百科 - 9月7日21.9M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点分享">VPN百科 - 9月7日21.9M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点分享</a></li>
+                        <li class="py-2"><a href="/news/article-148854.htm" title="手机V2Ray的TCP连接配置全攻略：安全上网的终极指南">手机V2Ray的TCP连接配置全攻略：安全上网的终极指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-1-free-node-subscribe-links.htm" title="VPN百科 - 9月1日23M/S|免费V2ray/Clash/Shadowrocket/SSR订阅节点分享">VPN百科 - 9月1日23M/S|免费V2ray/Clash/Shadowrocket/SSR订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-27-vpn-proxy.htm" title="VPN百科 - 8月27日18.6M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点分享">VPN百科 - 8月27日18.6M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-18-vpn-node.htm" title="VPN百科 - 9月18日20.8M/S|免费Shadowrocket/Clash/SSR/V2ray订阅节点分享">VPN百科 - 9月18日20.8M/S|免费Shadowrocket/Clash/SSR/V2ray订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-13-vpn-node.htm" title="VPN百科 - 9月13日22.5M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点分享">VPN百科 - 9月13日22.5M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点分享</a></li>
                     </ul>
     </div>
 </div>
@@ -299,7 +299,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">13</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">19</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
