--- a/free-nodes/2025-9-12-free-vpn-node.htm
+++ b/free-nodes/2025-9-12-free-vpn-node.htm
@@ -74,7 +74,7 @@
         <div class="container-fluid">
                         <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="logo">
-                                        <a href="/">VPN百科</a>
+                                        <a href="/">VPN百科资源库</a>
                                     </div>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -169,16 +169,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-147859.htm" title="V2Ray问题解决终极指南：从入门到精通的全方位排障手册">V2Ray问题解决终极指南：从入门到精通的全方位排障手册</a></li>
-                        <li class="py-2"><a href="/news/article-144931.htm" title="战地1网络优化全攻略：科学上网助你告别卡顿，畅享极致对战体验">战地1网络优化全攻略：科学上网助你告别卡顿，畅享极致对战体验</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-12-free-vpn-node.htm" title="VPN百科 - 9月12日21.2M/S|免费SSR/Clash/Shadowrocket/V2ray订阅节点分享">VPN百科 - 9月12日21.2M/S|免费SSR/Clash/Shadowrocket/V2ray订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-2-node-share-links.htm" title="VPN百科 - 9月2日18.6M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点分享">VPN百科 - 9月2日18.6M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点分享</a></li>
+                        <li class="py-2"><a href="/news/article-147128.htm" title="解锁网络自由：Shadowrocket节点捷径的终极配置指南与隐私保护艺术">解锁网络自由：Shadowrocket节点捷径的终极配置指南与隐私保护艺术</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-19-vpn-github.htm" title="VPN百科 - 9月19日22.9M/S|免费Shadowrocket/Clash/SSR/V2ray订阅节点分享">VPN百科 - 9月19日22.9M/S|免费Shadowrocket/Clash/SSR/V2ray订阅节点分享</a></li>
+                        <li class="py-2"><a href="/news/article-144206.htm" title="全面掌握Clash小剧场：从入门到精通的完整指南与深度解析">全面掌握Clash小剧场：从入门到精通的完整指南与深度解析</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-31-free-vpn.htm" title="VPN百科 - 8月31日18.7M/S|免费SSR/Shadowrocket/V2ray/Clash订阅节点分享">VPN百科 - 8月31日18.7M/S|免费SSR/Shadowrocket/V2ray/Clash订阅节点分享</a></li>
                         <li class="py-2"><a href="/news/article-142421.htm" title="Mac用户必看：Clash控制台消失的终极解决指南">Mac用户必看：Clash控制台消失的终极解决指南</a></li>
-                        <li class="py-2"><a href="/news/article-148854.htm" title="手机V2Ray的TCP连接配置全攻略：安全上网的终极指南">手机V2Ray的TCP连接配置全攻略：安全上网的终极指南</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-11-node-share.htm" title="VPN百科 - 9月11日18M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点分享">VPN百科 - 9月11日18M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-1-free-node-subscribe-links.htm" title="VPN百科 - 9月1日23M/S|免费V2ray/Clash/Shadowrocket/SSR订阅节点分享">VPN百科 - 9月1日23M/S|免费V2ray/Clash/Shadowrocket/SSR订阅节点分享</a></li>
-                        <li class="py-2"><a href="/news/article-142776.htm" title="全面掌握Shadowrocket安卓版：从零开始打造安全高效的代理环境">全面掌握Shadowrocket安卓版：从零开始打造安全高效的代理环境</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-29-vpn-free.htm" title="VPN百科 - 8月29日18.9M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点分享">VPN百科 - 8月29日18.9M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-4-vpn-github.htm" title="VPN百科 - 9月4日23M/S|免费V2ray/Shadowrocket/SSR/Clash订阅节点分享">VPN百科 - 9月4日23M/S|免费V2ray/Shadowrocket/SSR/Clash订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-14-free-node-subscribe-links.htm" title="VPN百科 - 9月14日22.2M/S|免费V2ray/Clash/Shadowrocket/SSR订阅节点分享">VPN百科 - 9月14日22.2M/S|免费V2ray/Clash/Shadowrocket/SSR订阅节点分享</a></li>
+                        <li class="py-2"><a href="/news/article-148513.htm" title="安卓V2Ray大陆访问困境：技术解析与突破之道">安卓V2Ray大陆访问困境：技术解析与突破之道</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-16-vpn-node.htm" title="VPN百科 - 9月16日22.3M/S|免费Clash/Shadowrocket/SSR/V2ray订阅节点分享">VPN百科 - 9月16日22.3M/S|免费Clash/Shadowrocket/SSR/V2ray订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-6-free-vpn-node.htm" title="VPN百科 - 9月6日19.9M/S|免费Shadowrocket/Clash/V2ray/SSR订阅节点分享">VPN百科 - 9月6日19.9M/S|免费Shadowrocket/Clash/V2ray/SSR订阅节点分享</a></li>
                     </ul>
     </div>
 </div>
@@ -190,7 +190,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">13</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">19</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
