--- a/free-nodes/page-2.htm
+++ b/free-nodes/page-2.htm
@@ -11,14 +11,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1">
 	<!-- site metas -->
-	<title>免费节点 - VPN百科 订阅教程网</title>
+	<title>VPN百科 免费节点 - 免费节点订阅和教程大全 - VPN百科 订阅教程网 - 第3页</title>
+		<meta name="keywords" content="VPN百科, 免费节点, 节点订阅, VPN教程, 免费VPN" />
+		<meta name="description" content="VPN百科提供全方位免费节点订阅信息和教程，帮助用户轻松使用VPN节点。" />
 	
     <meta name="author" content="VPN百科 订阅教程网">
     <meta property="og:type" content="webpage" />
     <meta property="og:url" content="https://vpnbaike.github.io/free-nodes/page-2.htm" />
     <meta property="og:site_name" content="VPN百科 订阅教程网" />
-    <meta property="og:title" content="免费节点 - VPN百科 订阅教程网" />
+    <meta property="og:title" content="VPN百科 免费节点 - 免费节点订阅和教程大全 - VPN百科 订阅教程网 - 第3页" />
     <meta property="og:image" content="/assets/website/img/clashnodesfree/favicon.ico" />
+        <meta property="og:description" content="VPN百科提供全方位免费节点订阅信息和教程，帮助用户轻松使用VPN节点。" />
         
 	<!-- bootstrap css -->
 	<link rel="stylesheet" type="text/css" href="/assets/website/css/clashnodesfree/bootstrap.min.css">
@@ -43,7 +46,7 @@
     <meta name="robots" content="max-image-preview:large" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="免费节点 - VPN百科 订阅教程网">
+    <meta name="apple-mobile-web-app-title" content="VPN百科 免费节点 - 免费节点订阅和教程大全 - VPN百科 订阅教程网 - 第3页">
     <meta name="format-detection" content="telephone=no">
 
     <link rel="dns-prefetch" href="https:/www.googletagmanager.com">
@@ -69,7 +72,7 @@
         <div class="container-fluid">
                         <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="logo">
-                                        <a href="/">VPN百科</a>
+                                        <a href="/">VPN百科资源库</a>
                                     </div>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -112,6 +115,96 @@
             </div>
             <div class="row">
                 <div class="col-md-9 xcblog-blog-list">
+                                        <div class="row item xcblog-blog-item" data-date="2025-09-09">
+                        <div class="col-md-3">
+                            <div class="about_img">
+                                <a href="/free-nodes/2025-9-9-free-node-subscribe.htm" title="VPN百科 - 9月9日22.4M/S|免费V2ray/Clash/SSR/Shadowrocket订阅节点分享" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/8eb9d9933ff3b2e0f7201530e522e98c.webp" alt="VPN百科 - 9月9日22.4M/S|免费V2ray/Clash/SSR/Shadowrocket订阅节点分享">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-9-9-free-node-subscribe.htm" title="VPN百科 - 9月9日22.4M/S|免费V2ray/Clash/SSR/Shadowrocket订阅节点分享" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">VPN百科 - 9月9日22.4M/S|免费V2ray/Clash/SSR/Shadowrocket订阅节点分享</h3>
+                            </a>
+                            <p class="about_text">这一次的节点更新覆盖了美国、新加坡、日本、欧洲、韩国、加拿大、香港等地区,最高速度可达22.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-09-08">
+                        <div class="col-md-3">
+                            <div class="about_img">
+                                <a href="/free-nodes/2025-9-8-node-share-links.htm" title="VPN百科 - 9月8日21.3M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点分享" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/6e0666170b743f277ea390817dbb58e7.webp" alt="VPN百科 - 9月8日21.3M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点分享">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-9-8-node-share-links.htm" title="VPN百科 - 9月8日21.3M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点分享" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">VPN百科 - 9月8日21.3M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点分享</h3>
+                            </a>
+                            <p class="about_text">这一次的节点更新覆盖了欧洲、加拿大、日本、香港、美国、新加坡、韩国等地区,最高速度可达21.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-09-07">
+                        <div class="col-md-3">
+                            <div class="about_img">
+                                <a href="/free-nodes/2025-9-7-vpn-free.htm" title="VPN百科 - 9月7日21.9M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点分享" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/67515d5613f54ad595999fa7d2110788.webp" alt="VPN百科 - 9月7日21.9M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点分享">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-9-7-vpn-free.htm" title="VPN百科 - 9月7日21.9M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点分享" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">VPN百科 - 9月7日21.9M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点分享</h3>
+                            </a>
+                            <p class="about_text">这一次的节点更新覆盖了日本、欧洲、新加坡、韩国、香港、加拿大、美国等地区,最高速度可达21.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-09-06">
+                        <div class="col-md-3">
+                            <div class="about_img">
+                                <a href="/free-nodes/2025-9-6-free-vpn-node.htm" title="VPN百科 - 9月6日19.9M/S|免费Shadowrocket/Clash/V2ray/SSR订阅节点分享" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/2c41239ac39028609af4b6e4c787f732.webp" alt="VPN百科 - 9月6日19.9M/S|免费Shadowrocket/Clash/V2ray/SSR订阅节点分享">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-9-6-free-vpn-node.htm" title="VPN百科 - 9月6日19.9M/S|免费Shadowrocket/Clash/V2ray/SSR订阅节点分享" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">VPN百科 - 9月6日19.9M/S|免费Shadowrocket/Clash/V2ray/SSR订阅节点分享</h3>
+                            </a>
+                            <p class="about_text">这一次的节点更新覆盖了新加坡、韩国、加拿大、日本、香港、美国、欧洲等地区,最高速度可达19.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-09-05">
+                        <div class="col-md-3">
+                            <div class="about_img">
+                                <a href="/free-nodes/2025-9-5-mianfei-vpn.htm" title="VPN百科 - 9月5日20.4M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点分享" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/f473c41fc227da7d258e0f7572adbd50.webp" alt="VPN百科 - 9月5日20.4M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点分享">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-9-5-mianfei-vpn.htm" title="VPN百科 - 9月5日20.4M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点分享" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">VPN百科 - 9月5日20.4M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点分享</h3>
+                            </a>
+                            <p class="about_text">这一次的节点更新覆盖了美国、日本、加拿大、香港、新加坡、韩国、欧洲等地区,最高速度可达20.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-09-04">
+                        <div class="col-md-3">
+                            <div class="about_img">
+                                <a href="/free-nodes/2025-9-4-vpn-github.htm" title="VPN百科 - 9月4日23M/S|免费V2ray/Shadowrocket/SSR/Clash订阅节点分享" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/f473c41fc227da7d258e0f7572adbd50.webp" alt="VPN百科 - 9月4日23M/S|免费V2ray/Shadowrocket/SSR/Clash订阅节点分享">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-9-4-vpn-github.htm" title="VPN百科 - 9月4日23M/S|免费V2ray/Shadowrocket/SSR/Clash订阅节点分享" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">VPN百科 - 9月4日23M/S|免费V2ray/Shadowrocket/SSR/Clash订阅节点分享</h3>
+                            </a>
+                            <p class="about_text">这一次的节点更新覆盖了美国、香港、加拿大、韩国、新加坡、欧洲、日本等地区,最高速度可达23 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
                                         <div class="row item xcblog-blog-item" data-date="2025-09-03">
                         <div class="col-md-3">
                             <div class="about_img">
@@ -172,38 +265,8 @@
                             <p class="about_text">这一次的节点更新覆盖了加拿大、新加坡、欧洲、日本、香港、韩国、美国等地区,最高速度可达18.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
                         </div>
                     </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-08-29">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/free-nodes/2025-8-29-vpn-free.htm" title="VPN百科 - 8月29日18.9M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点分享" class="xcblog-blog-url">
-                                    <img src="/uploads/20240323/15ae8fa851b4c56e4081dda0520bb4ec.webp" alt="VPN百科 - 8月29日18.9M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点分享">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/free-nodes/2025-8-29-vpn-free.htm" title="VPN百科 - 8月29日18.9M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点分享" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">VPN百科 - 8月29日18.9M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点分享</h3>
-                            </a>
-                            <p class="about_text">这一次的节点更新覆盖了欧洲、美国、加拿大、日本、韩国、香港、新加坡等地区,最高速度可达18.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                        </div>
-                    </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-08-27">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/free-nodes/2025-8-27-vpn-proxy.htm" title="VPN百科 - 8月27日18.6M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点分享" class="xcblog-blog-url">
-                                    <img src="/uploads/20240323/818f2f93dcbeed0252bc858caff32aed.webp" alt="VPN百科 - 8月27日18.6M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点分享">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/free-nodes/2025-8-27-vpn-proxy.htm" title="VPN百科 - 8月27日18.6M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点分享" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">VPN百科 - 8月27日18.6M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点分享</h3>
-                            </a>
-                            <p class="about_text">这一次的节点更新覆盖了香港、日本、加拿大、新加坡、美国、欧洲、韩国等地区,最高速度可达18.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                        </div>
-                    </div>
                                         
-                    <ul class="pagination"><li><a href="/free-nodes/">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li class="active"><span>2</span></li> <li class="disabled"><span>&raquo;</span></li></ul>                </div>
+                    <ul class="pagination"><li><a href="/free-nodes/">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li class="active"><span>2</span></li><li><a href="/free-nodes/page-3.htm">3</a></li> <li><a href="/free-nodes/page-3.htm">&raquo;</a></li></ul>                </div>
                 <div class="col-md-3">
                     <div class="panel panel-default">
     <div class="panel-heading">
@@ -211,16 +274,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-143126.htm" title="突破网络藩篱：TV盒子科学上网终极指南与深度体验">突破网络藩篱：TV盒子科学上网终极指南与深度体验</a></li>
                         <li class="py-2"><a href="/news/article-144568.htm" title="突破网络限制：Shadowrocket免费节点二维码获取与使用终极指南">突破网络限制：Shadowrocket免费节点二维码获取与使用终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-147436.htm" title="Quantumult与Shadow深度评测：科学上网工具如何选？">Quantumult与Shadow深度评测：科学上网工具如何选？</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-3-share-vpn.htm" title="VPN百科 - 9月3日20.4M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点分享">VPN百科 - 9月3日20.4M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点分享</a></li>
-                        <li class="py-2"><a href="/news/article-141698.htm" title="洋葱之力：用Tor浏览器突破网络封锁的终极指南">洋葱之力：用Tor浏览器突破网络封锁的终极指南</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-10-vpn-proxy.htm" title="VPN百科 - 9月10日21.6M/S|免费Shadowrocket/Clash/V2ray/SSR订阅节点分享">VPN百科 - 9月10日21.6M/S|免费Shadowrocket/Clash/V2ray/SSR订阅节点分享</a></li>
-                        <li class="py-2"><a href="/news/article-147128.htm" title="解锁网络自由：Shadowrocket节点捷径的终极配置指南与隐私保护艺术">解锁网络自由：Shadowrocket节点捷径的终极配置指南与隐私保护艺术</a></li>
-                        <li class="py-2"><a href="/news/article-144931.htm" title="战地1网络优化全攻略：科学上网助你告别卡顿，畅享极致对战体验">战地1网络优化全攻略：科学上网助你告别卡顿，畅享极致对战体验</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-6-free-vpn-node.htm" title="VPN百科 - 9月6日19.9M/S|免费Shadowrocket/Clash/V2ray/SSR订阅节点分享">VPN百科 - 9月6日19.9M/S|免费Shadowrocket/Clash/V2ray/SSR订阅节点分享</a></li>
+                        <li class="py-2"><a href="/news/article-146757.htm" title="突破网络边界：手机与电脑科学上网的终极指南">突破网络边界：手机与电脑科学上网的终极指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-31-free-vpn.htm" title="VPN百科 - 8月31日18.7M/S|免费SSR/Shadowrocket/V2ray/Clash订阅节点分享">VPN百科 - 8月31日18.7M/S|免费SSR/Shadowrocket/V2ray/Clash订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-11-node-share.htm" title="VPN百科 - 9月11日18M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点分享">VPN百科 - 9月11日18M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-13-vpn-node.htm" title="VPN百科 - 9月13日22.5M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点分享">VPN百科 - 9月13日22.5M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点分享</a></li>
+                        <li class="py-2"><a href="/news/article-148854.htm" title="手机V2Ray的TCP连接配置全攻略：安全上网的终极指南">手机V2Ray的TCP连接配置全攻略：安全上网的终极指南</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-7-vpn-free.htm" title="VPN百科 - 9月7日21.9M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点分享">VPN百科 - 9月7日21.9M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点分享</a></li>
+                        <li class="py-2"><a href="/news/article-145296.htm" title="从入门到精通：全面掌握Vmess链接转码的核心技术与实践指南">从入门到精通：全面掌握Vmess链接转码的核心技术与实践指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-17-node-share.htm" title="VPN百科 - 9月17日18.6M/S|免费Shadowrocket/Clash/SSR/V2ray订阅节点分享">VPN百科 - 9月17日18.6M/S|免费Shadowrocket/Clash/SSR/V2ray订阅节点分享</a></li>
+                        <li class="py-2"><a href="/news/article-142054.htm" title="制霸部落冲突：从青铜到传奇的阶梯攀升终极指南">制霸部落冲突：从青铜到传奇的阶梯攀升终极指南</a></li>
                     </ul>
     </div>
 </div>
@@ -232,7 +295,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">13</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">19</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
