--- a/privacy.htm
+++ b/privacy.htm
@@ -72,7 +72,7 @@
         <div class="container-fluid">
                         <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="logo">
-                                        <a href="/">VPN百科</a>
+                                        <a href="/">VPN百科资源库</a>
                                     </div>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -165,16 +165,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2"><a href="/free-nodes/2025-9-17-node-share.htm" title="VPN百科 - 9月17日18.6M/S|免费Shadowrocket/Clash/SSR/V2ray订阅节点分享">VPN百科 - 9月17日18.6M/S|免费Shadowrocket/Clash/SSR/V2ray订阅节点分享</a></li>
                         <li class="py-2"><a href="/news/article-144206.htm" title="全面掌握Clash小剧场：从入门到精通的完整指南与深度解析">全面掌握Clash小剧场：从入门到精通的完整指南与深度解析</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-8-node-share-links.htm" title="VPN百科 - 9月8日21.3M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点分享">VPN百科 - 9月8日21.3M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-12-free-vpn-node.htm" title="VPN百科 - 9月12日21.2M/S|免费SSR/Clash/Shadowrocket/V2ray订阅节点分享">VPN百科 - 9月12日21.2M/S|免费SSR/Clash/Shadowrocket/V2ray订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-6-free-vpn-node.htm" title="VPN百科 - 9月6日19.9M/S|免费Shadowrocket/Clash/V2ray/SSR订阅节点分享">VPN百科 - 9月6日19.9M/S|免费Shadowrocket/Clash/V2ray/SSR订阅节点分享</a></li>
-                        <li class="py-2"><a href="/news/article-147128.htm" title="解锁网络自由：Shadowrocket节点捷径的终极配置指南与隐私保护艺术">解锁网络自由：Shadowrocket节点捷径的终极配置指南与隐私保护艺术</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-27-vpn-proxy.htm" title="VPN百科 - 8月27日18.6M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点分享">VPN百科 - 8月27日18.6M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点分享</a></li>
-                        <li class="py-2"><a href="/news/article-142421.htm" title="Mac用户必看：Clash控制台消失的终极解决指南">Mac用户必看：Clash控制台消失的终极解决指南</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-5-mianfei-vpn.htm" title="VPN百科 - 9月5日20.4M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点分享">VPN百科 - 9月5日20.4M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点分享</a></li>
-                        <li class="py-2"><a href="/news/article-148513.htm" title="安卓V2Ray大陆访问困境：技术解析与突破之道">安卓V2Ray大陆访问困境：技术解析与突破之道</a></li>
-                        <li class="py-2"><a href="/news/article-141698.htm" title="洋葱之力：用Tor浏览器突破网络封锁的终极指南">洋葱之力：用Tor浏览器突破网络封锁的终极指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-3-share-vpn.htm" title="VPN百科 - 9月3日20.4M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点分享">VPN百科 - 9月3日20.4M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-1-free-node-subscribe-links.htm" title="VPN百科 - 9月1日23M/S|免费V2ray/Clash/Shadowrocket/SSR订阅节点分享">VPN百科 - 9月1日23M/S|免费V2ray/Clash/Shadowrocket/SSR订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-7-vpn-free.htm" title="VPN百科 - 9月7日21.9M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点分享">VPN百科 - 9月7日21.9M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点分享</a></li>
+                        <li class="py-2"><a href="/news/article-145662.htm" title="无线路由器科学上网全攻略：从入门到精通">无线路由器科学上网全攻略：从入门到精通</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-16-vpn-node.htm" title="VPN百科 - 9月16日22.3M/S|免费Clash/Shadowrocket/SSR/V2ray订阅节点分享">VPN百科 - 9月16日22.3M/S|免费Clash/Shadowrocket/SSR/V2ray订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-29-vpn-free.htm" title="VPN百科 - 8月29日18.9M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点分享">VPN百科 - 8月29日18.9M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点分享</a></li>
+                        <li class="py-2"><a href="/news/article-143126.htm" title="突破网络藩篱：TV盒子科学上网终极指南与深度体验">突破网络藩篱：TV盒子科学上网终极指南与深度体验</a></li>
                     </ul>
     </div>
 </div>
@@ -186,7 +186,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">13</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">19</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
