--- a/date/2025-08/page-3.htm
+++ b/date/2025-08/page-3.htm
@@ -184,16 +184,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-146391.htm" title="科学上网与全球主机服务器建站完全指南：从入门到精通">科学上网与全球主机服务器建站完全指南：从入门到精通</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-3-share-vpn.htm" title="VPN百科 - 9月3日20.4M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点分享">VPN百科 - 9月3日20.4M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-4-vpn-github.htm" title="VPN百科 - 9月4日23M/S|免费V2ray/Shadowrocket/SSR/Clash订阅节点分享">VPN百科 - 9月4日23M/S|免费V2ray/Shadowrocket/SSR/Clash订阅节点分享</a></li>
-                        <li class="py-2"><a href="/news/article-145296.htm" title="从入门到精通：全面掌握Vmess链接转码的核心技术与实践指南">从入门到精通：全面掌握Vmess链接转码的核心技术与实践指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-23-mianfei-vpn.htm" title="VPN百科 - 9月23日19.9M/S|免费SSR/Clash/Shadowrocket/V2ray订阅节点分享">VPN百科 - 9月23日19.9M/S|免费SSR/Clash/Shadowrocket/V2ray订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-11-node-share.htm" title="VPN百科 - 9月11日18M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点分享">VPN百科 - 9月11日18M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-21-free-vpn.htm" title="VPN百科 - 9月21日19.9M/S|免费SSR/Shadowrocket/V2ray/Clash订阅节点分享">VPN百科 - 9月21日19.9M/S|免费SSR/Shadowrocket/V2ray/Clash订阅节点分享</a></li>
+                        <li class="py-2"><a href="/news/article-143481.htm" title="解锁全球网络自由：手把手教你轻松添加V2Ray订阅">解锁全球网络自由：手把手教你轻松添加V2Ray订阅</a></li>
+                        <li class="py-2"><a href="/news/article-144568.htm" title="突破网络限制：Shadowrocket免费节点二维码获取与使用终极指南">突破网络限制：Shadowrocket免费节点二维码获取与使用终极指南</a></li>
                         <li class="py-2"><a href="/news/article-147436.htm" title="Quantumult与Shadow深度评测：科学上网工具如何选？">Quantumult与Shadow深度评测：科学上网工具如何选？</a></li>
-                        <li class="py-2"><a href="/news/article-142054.htm" title="制霸部落冲突：从青铜到传奇的阶梯攀升终极指南">制霸部落冲突：从青铜到传奇的阶梯攀升终极指南</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-8-node-share-links.htm" title="VPN百科 - 9月8日21.3M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点分享">VPN百科 - 9月8日21.3M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-10-vpn-proxy.htm" title="VPN百科 - 9月10日21.6M/S|免费Shadowrocket/Clash/V2ray/SSR订阅节点分享">VPN百科 - 9月10日21.6M/S|免费Shadowrocket/Clash/V2ray/SSR订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-15-node-share-links.htm" title="VPN百科 - 9月15日21.9M/S|免费V2ray/Shadowrocket/Clash/SSR订阅节点分享">VPN百科 - 9月15日21.9M/S|免费V2ray/Shadowrocket/Clash/SSR订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-27-vpn-proxy.htm" title="VPN百科 - 8月27日18.6M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点分享">VPN百科 - 8月27日18.6M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-18-vpn-node.htm" title="VPN百科 - 9月18日20.8M/S|免费Shadowrocket/Clash/SSR/V2ray订阅节点分享">VPN百科 - 9月18日20.8M/S|免费Shadowrocket/Clash/SSR/V2ray订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-17-node-share.htm" title="VPN百科 - 9月17日18.6M/S|免费Shadowrocket/Clash/SSR/V2ray订阅节点分享">VPN百科 - 9月17日18.6M/S|免费Shadowrocket/Clash/SSR/V2ray订阅节点分享</a></li>
+                        <li class="py-2"><a href="/news/article-148854.htm" title="手机V2Ray的TCP连接配置全攻略：安全上网的终极指南">手机V2Ray的TCP连接配置全攻略：安全上网的终极指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-4-vpn-github.htm" title="VPN百科 - 9月4日23M/S|免费V2ray/Shadowrocket/SSR/Clash订阅节点分享">VPN百科 - 9月4日23M/S|免费V2ray/Shadowrocket/SSR/Clash订阅节点分享</a></li>
                     </ul>
     </div>
 </div>
@@ -205,7 +205,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">19</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">23</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
@@ -225,7 +225,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
-                                        <p>
+                                        <p>本站内容仅供学习与技术研究用途，无意传播或倡导任何违反法律法规的行为。在此声明：用户须自行了解所在地法律法规，合法合规使用；因使用不当产生的法律责任，与本站及作者无关；请在使用前仔细阅读本声明，继续使用即视为同意以上条款。</p>
+                    <p>
                                                 <a href="/">首页</a> |
                                                 <a href="/free-nodes/">免费节点</a> |
                                                 <a href="/paid-subscribe/">推荐机场</a> |
@@ -236,7 +237,7 @@
                         <a href="/privacy.htm">隐私申明</a> |
                         <a href="/sitemap.xml">网站地图</a>
                     </p>
-                    <p class="copyright_text">
+                                        <p class="copyright_text">
                             VPN百科 订阅教程网 版权所有
                             <br />
                             Powered by WordPress
