--- a/free-nodes/2025-9-19-vpn-github.htm
+++ b/free-nodes/2025-9-19-vpn-github.htm
@@ -145,6 +145,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
                 <div class="clearfix"></div>
                 <div class="col-md-12 mt-5">
                                         <p>上一个：<a href="/free-nodes/2025-9-18-vpn-node.htm">VPN百科 - 9月18日20.8M/S|免费Shadowrocket/Clash/SSR/V2ray订阅节点分享</a></p>
+                                        <p>下一个：<a href="/free-nodes/2025-9-20-mianfei-vpn.htm">VPN百科 - 9月20日20.5M/S|免费V2ray/Clash/SSR/Shadowrocket订阅节点分享</a></p>
                                     </div>
                                 <div class="panel panel-default mt-5">
                     <div class="panel-heading">
@@ -173,16 +174,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-9-17-node-share.htm" title="VPN百科 - 9月17日18.6M/S|免费Shadowrocket/Clash/SSR/V2ray订阅节点分享">VPN百科 - 9月17日18.6M/S|免费Shadowrocket/Clash/SSR/V2ray订阅节点分享</a></li>
-                        <li class="py-2"><a href="/news/article-141698.htm" title="洋葱之力：用Tor浏览器突破网络封锁的终极指南">洋葱之力：用Tor浏览器突破网络封锁的终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-143481.htm" title="解锁全球网络自由：手把手教你轻松添加V2Ray订阅">解锁全球网络自由：手把手教你轻松添加V2Ray订阅</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-9-free-node-subscribe.htm" title="VPN百科 - 9月9日22.4M/S|免费V2ray/Clash/SSR/Shadowrocket订阅节点分享">VPN百科 - 9月9日22.4M/S|免费V2ray/Clash/SSR/Shadowrocket订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-18-vpn-node.htm" title="VPN百科 - 9月18日20.8M/S|免费Shadowrocket/Clash/SSR/V2ray订阅节点分享">VPN百科 - 9月18日20.8M/S|免费Shadowrocket/Clash/SSR/V2ray订阅节点分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-29-vpn-free.htm" title="VPN百科 - 8月29日18.9M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点分享">VPN百科 - 8月29日18.9M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点分享</a></li>
-                        <li class="py-2"><a href="/news/article-147128.htm" title="解锁网络自由：Shadowrocket节点捷径的终极配置指南与隐私保护艺术">解锁网络自由：Shadowrocket节点捷径的终极配置指南与隐私保护艺术</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-23-mianfei-vpn.htm" title="VPN百科 - 9月23日19.9M/S|免费SSR/Clash/Shadowrocket/V2ray订阅节点分享">VPN百科 - 9月23日19.9M/S|免费SSR/Clash/Shadowrocket/V2ray订阅节点分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-15-node-share-links.htm" title="VPN百科 - 9月15日21.9M/S|免费V2ray/Shadowrocket/Clash/SSR订阅节点分享">VPN百科 - 9月15日21.9M/S|免费V2ray/Shadowrocket/Clash/SSR订阅节点分享</a></li>
-                        <li class="py-2"><a href="/news/article-144931.htm" title="战地1网络优化全攻略：科学上网助你告别卡顿，畅享极致对战体验">战地1网络优化全攻略：科学上网助你告别卡顿，畅享极致对战体验</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-8-node-share-links.htm" title="VPN百科 - 9月8日21.3M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点分享">VPN百科 - 9月8日21.3M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-21-free-vpn.htm" title="VPN百科 - 9月21日19.9M/S|免费SSR/Shadowrocket/V2ray/Clash订阅节点分享">VPN百科 - 9月21日19.9M/S|免费SSR/Shadowrocket/V2ray/Clash订阅节点分享</a></li>
+                        <li class="py-2"><a href="/news/article-143126.htm" title="突破网络藩篱：TV盒子科学上网终极指南与深度体验">突破网络藩篱：TV盒子科学上网终极指南与深度体验</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-20-mianfei-vpn.htm" title="VPN百科 - 9月20日20.5M/S|免费V2ray/Clash/SSR/Shadowrocket订阅节点分享">VPN百科 - 9月20日20.5M/S|免费V2ray/Clash/SSR/Shadowrocket订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-17-node-share.htm" title="VPN百科 - 9月17日18.6M/S|免费Shadowrocket/Clash/SSR/V2ray订阅节点分享">VPN百科 - 9月17日18.6M/S|免费Shadowrocket/Clash/SSR/V2ray订阅节点分享</a></li>
+                        <li class="py-2"><a href="/news/article-147128.htm" title="解锁网络自由：Shadowrocket节点捷径的终极配置指南与隐私保护艺术">解锁网络自由：Shadowrocket节点捷径的终极配置指南与隐私保护艺术</a></li>
+                        <li class="py-2"><a href="/news/article-145964.htm" title="大型云游戏助手——Clash游戏加速器全面解析与深度体验">大型云游戏助手——Clash游戏加速器全面解析与深度体验</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-12-free-vpn-node.htm" title="VPN百科 - 9月12日21.2M/S|免费SSR/Clash/Shadowrocket/V2ray订阅节点分享">VPN百科 - 9月12日21.2M/S|免费SSR/Clash/Shadowrocket/V2ray订阅节点分享</a></li>
+                        <li class="py-2"><a href="/news/article-142776.htm" title="全面掌握Shadowrocket安卓版：从零开始打造安全高效的代理环境">全面掌握Shadowrocket安卓版：从零开始打造安全高效的代理环境</a></li>
                     </ul>
     </div>
 </div>
@@ -194,7 +195,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">19</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">23</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
@@ -214,7 +215,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
-                                        <p>
+                                        <p>本站内容仅供学习与技术研究用途，无意传播或倡导任何违反法律法规的行为。在此声明：用户须自行了解所在地法律法规，合法合规使用；因使用不当产生的法律责任，与本站及作者无关；请在使用前仔细阅读本声明，继续使用即视为同意以上条款。</p>
+                    <p>
                                                 <a href="/">首页</a> |
                                                 <a href="/free-nodes/">免费节点</a> |
                                                 <a href="/paid-subscribe/">推荐机场</a> |
@@ -225,7 +227,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
                         <a href="/privacy.htm">隐私申明</a> |
                         <a href="/sitemap.xml">网站地图</a>
                     </p>
-                    <p class="copyright_text">
+                                        <p class="copyright_text">
                             VPN百科 订阅教程网 版权所有
                             <br />
                             Powered by WordPress
