--- a/free-nodes/index.htm
+++ b/free-nodes/index.htm
@@ -115,6 +115,66 @@
             </div>
             <div class="row">
                 <div class="col-md-9 xcblog-blog-list">
+                                        <div class="row item xcblog-blog-item" data-date="2025-09-23">
+                        <div class="col-md-3">
+                            <div class="about_img">
+                                <a href="/free-nodes/2025-9-23-mianfei-vpn.htm" title="VPN百科 - 9月23日19.9M/S|免费SSR/Clash/Shadowrocket/V2ray订阅节点分享" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/8eb9d9933ff3b2e0f7201530e522e98c.webp" alt="VPN百科 - 9月23日19.9M/S|免费SSR/Clash/Shadowrocket/V2ray订阅节点分享">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-9-23-mianfei-vpn.htm" title="VPN百科 - 9月23日19.9M/S|免费SSR/Clash/Shadowrocket/V2ray订阅节点分享" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">VPN百科 - 9月23日19.9M/S|免费SSR/Clash/Shadowrocket/V2ray订阅节点分享</h3>
+                            </a>
+                            <p class="about_text">这一次的节点更新覆盖了欧洲、加拿大、美国、韩国、日本、新加坡、香港等地区,最高速度可达19.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-09-22">
+                        <div class="col-md-3">
+                            <div class="about_img">
+                                <a href="/free-nodes/2025-9-22-node-share-links.htm" title="VPN百科 - 9月22日20.7M/S|免费Clash/Shadowrocket/SSR/V2ray订阅节点分享" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/ab599ebafb70ed96cc9f2fcd546d435d.webp" alt="VPN百科 - 9月22日20.7M/S|免费Clash/Shadowrocket/SSR/V2ray订阅节点分享">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-9-22-node-share-links.htm" title="VPN百科 - 9月22日20.7M/S|免费Clash/Shadowrocket/SSR/V2ray订阅节点分享" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">VPN百科 - 9月22日20.7M/S|免费Clash/Shadowrocket/SSR/V2ray订阅节点分享</h3>
+                            </a>
+                            <p class="about_text">这一次的节点更新覆盖了新加坡、欧洲、加拿大、韩国、香港、美国、日本等地区,最高速度可达20.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-09-21">
+                        <div class="col-md-3">
+                            <div class="about_img">
+                                <a href="/free-nodes/2025-9-21-free-vpn.htm" title="VPN百科 - 9月21日19.9M/S|免费SSR/Shadowrocket/V2ray/Clash订阅节点分享" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/8945162c010840446e9af908a3d6269d.webp" alt="VPN百科 - 9月21日19.9M/S|免费SSR/Shadowrocket/V2ray/Clash订阅节点分享">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-9-21-free-vpn.htm" title="VPN百科 - 9月21日19.9M/S|免费SSR/Shadowrocket/V2ray/Clash订阅节点分享" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">VPN百科 - 9月21日19.9M/S|免费SSR/Shadowrocket/V2ray/Clash订阅节点分享</h3>
+                            </a>
+                            <p class="about_text">这一次的节点更新覆盖了加拿大、美国、韩国、新加坡、欧洲、香港、日本等地区,最高速度可达19.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-09-20">
+                        <div class="col-md-3">
+                            <div class="about_img">
+                                <a href="/free-nodes/2025-9-20-mianfei-vpn.htm" title="VPN百科 - 9月20日20.5M/S|免费V2ray/Clash/SSR/Shadowrocket订阅节点分享" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/dbb125d5f2056af3c5a995d7c82225ac.webp" alt="VPN百科 - 9月20日20.5M/S|免费V2ray/Clash/SSR/Shadowrocket订阅节点分享">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-9-20-mianfei-vpn.htm" title="VPN百科 - 9月20日20.5M/S|免费V2ray/Clash/SSR/Shadowrocket订阅节点分享" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">VPN百科 - 9月20日20.5M/S|免费V2ray/Clash/SSR/Shadowrocket订阅节点分享</h3>
+                            </a>
+                            <p class="about_text">这一次的节点更新覆盖了加拿大、美国、新加坡、欧洲、日本、韩国、香港等地区,最高速度可达20.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
                                         <div class="row item xcblog-blog-item" data-date="2025-09-19">
                         <div class="col-md-3">
                             <div class="about_img">
@@ -205,66 +265,6 @@
                             <p class="about_text">这一次的节点更新覆盖了日本、加拿大、韩国、香港、新加坡、美国、欧洲等地区,最高速度可达22.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
                         </div>
                     </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-09-13">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/free-nodes/2025-9-13-vpn-node.htm" title="VPN百科 - 9月13日22.5M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点分享" class="xcblog-blog-url">
-                                    <img src="/uploads/20240323/d3933e448d10217e26c64fd907d4d3a2.webp" alt="VPN百科 - 9月13日22.5M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点分享">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/free-nodes/2025-9-13-vpn-node.htm" title="VPN百科 - 9月13日22.5M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点分享" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">VPN百科 - 9月13日22.5M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点分享</h3>
-                            </a>
-                            <p class="about_text">这一次的节点更新覆盖了韩国、欧洲、美国、日本、新加坡、加拿大、香港等地区,最高速度可达22.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                        </div>
-                    </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-09-12">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/free-nodes/2025-9-12-free-vpn-node.htm" title="VPN百科 - 9月12日21.2M/S|免费SSR/Clash/Shadowrocket/V2ray订阅节点分享" class="xcblog-blog-url">
-                                    <img src="/uploads/20240323/ab599ebafb70ed96cc9f2fcd546d435d.webp" alt="VPN百科 - 9月12日21.2M/S|免费SSR/Clash/Shadowrocket/V2ray订阅节点分享">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/free-nodes/2025-9-12-free-vpn-node.htm" title="VPN百科 - 9月12日21.2M/S|免费SSR/Clash/Shadowrocket/V2ray订阅节点分享" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">VPN百科 - 9月12日21.2M/S|免费SSR/Clash/Shadowrocket/V2ray订阅节点分享</h3>
-                            </a>
-                            <p class="about_text">这一次的节点更新覆盖了欧洲、韩国、美国、日本、香港、新加坡、加拿大等地区,最高速度可达21.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                        </div>
-                    </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-09-11">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/free-nodes/2025-9-11-node-share.htm" title="VPN百科 - 9月11日18M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点分享" class="xcblog-blog-url">
-                                    <img src="/uploads/20240323/dbb125d5f2056af3c5a995d7c82225ac.webp" alt="VPN百科 - 9月11日18M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点分享">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/free-nodes/2025-9-11-node-share.htm" title="VPN百科 - 9月11日18M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点分享" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">VPN百科 - 9月11日18M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点分享</h3>
-                            </a>
-                            <p class="about_text">这一次的节点更新覆盖了新加坡、日本、欧洲、香港、韩国、加拿大、美国等地区,最高速度可达18 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                        </div>
-                    </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-09-10">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/free-nodes/2025-9-10-vpn-proxy.htm" title="VPN百科 - 9月10日21.6M/S|免费Shadowrocket/Clash/V2ray/SSR订阅节点分享" class="xcblog-blog-url">
-                                    <img src="/uploads/20240323/1efe5cff0e659c7211e5b8f615d11cd4.webp" alt="VPN百科 - 9月10日21.6M/S|免费Shadowrocket/Clash/V2ray/SSR订阅节点分享">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/free-nodes/2025-9-10-vpn-proxy.htm" title="VPN百科 - 9月10日21.6M/S|免费Shadowrocket/Clash/V2ray/SSR订阅节点分享" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">VPN百科 - 9月10日21.6M/S|免费Shadowrocket/Clash/V2ray/SSR订阅节点分享</h3>
-                            </a>
-                            <p class="about_text">这一次的节点更新覆盖了韩国、新加坡、日本、欧洲、加拿大、香港、美国等地区,最高速度可达21.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                        </div>
-                    </div>
                                         
                     <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/free-nodes/page-2.htm">2</a></li><li><a href="/free-nodes/page-3.htm">3</a></li> <li><a href="/free-nodes/page-2.htm">&raquo;</a></li></ul>                </div>
                 <div class="col-md-3">
@@ -275,15 +275,15 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2"><a href="/news/article-148153.htm" title="彻底解决Clash更新难题：从故障排查到完美修复的全方位指南">彻底解决Clash更新难题：从故障排查到完美修复的全方位指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-11-node-share.htm" title="VPN百科 - 9月11日18M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点分享">VPN百科 - 9月11日18M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-16-vpn-node.htm" title="VPN百科 - 9月16日22.3M/S|免费Clash/Shadowrocket/SSR/V2ray订阅节点分享">VPN百科 - 9月16日22.3M/S|免费Clash/Shadowrocket/SSR/V2ray订阅节点分享</a></li>
+                        <li class="py-2"><a href="/news/article-144931.htm" title="战地1网络优化全攻略：科学上网助你告别卡顿，畅享极致对战体验">战地1网络优化全攻略：科学上网助你告别卡顿，畅享极致对战体验</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-18-vpn-node.htm" title="VPN百科 - 9月18日20.8M/S|免费Shadowrocket/Clash/SSR/V2ray订阅节点分享">VPN百科 - 9月18日20.8M/S|免费Shadowrocket/Clash/SSR/V2ray订阅节点分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-8-node-share-links.htm" title="VPN百科 - 9月8日21.3M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点分享">VPN百科 - 9月8日21.3M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点分享</a></li>
-                        <li class="py-2"><a href="/news/article-146391.htm" title="科学上网与全球主机服务器建站完全指南：从入门到精通">科学上网与全球主机服务器建站完全指南：从入门到精通</a></li>
-                        <li class="py-2"><a href="/news/article-147859.htm" title="V2Ray问题解决终极指南：从入门到精通的全方位排障手册">V2Ray问题解决终极指南：从入门到精通的全方位排障手册</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-13-vpn-node.htm" title="VPN百科 - 9月13日22.5M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点分享">VPN百科 - 9月13日22.5M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点分享</a></li>
-                        <li class="py-2"><a href="/news/article-145662.htm" title="无线路由器科学上网全攻略：从入门到精通">无线路由器科学上网全攻略：从入门到精通</a></li>
-                        <li class="py-2"><a href="/news/article-145296.htm" title="从入门到精通：全面掌握Vmess链接转码的核心技术与实践指南">从入门到精通：全面掌握Vmess链接转码的核心技术与实践指南</a></li>
+                        <li class="py-2"><a href="/news/article-148513.htm" title="安卓V2Ray大陆访问困境：技术解析与突破之道">安卓V2Ray大陆访问困境：技术解析与突破之道</a></li>
+                        <li class="py-2"><a href="/news/article-143838.htm" title="全面解析：Clash 电脑版32位下载安装与配置全攻略">全面解析：Clash 电脑版32位下载安装与配置全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-141698.htm" title="洋葱之力：用Tor浏览器突破网络封锁的终极指南">洋葱之力：用Tor浏览器突破网络封锁的终极指南</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-9-free-node-subscribe.htm" title="VPN百科 - 9月9日22.4M/S|免费V2ray/Clash/SSR/Shadowrocket订阅节点分享">VPN百科 - 9月9日22.4M/S|免费V2ray/Clash/SSR/Shadowrocket订阅节点分享</a></li>
-                        <li class="py-2"><a href="/news/article-143126.htm" title="突破网络藩篱：TV盒子科学上网终极指南与深度体验">突破网络藩篱：TV盒子科学上网终极指南与深度体验</a></li>
-                        <li class="py-2"><a href="/news/article-147128.htm" title="解锁网络自由：Shadowrocket节点捷径的终极配置指南与隐私保护艺术">解锁网络自由：Shadowrocket节点捷径的终极配置指南与隐私保护艺术</a></li>
                     </ul>
     </div>
 </div>
@@ -295,7 +295,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">19</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">23</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
@@ -315,7 +315,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
-                                        <p>
+                                        <p>本站内容仅供学习与技术研究用途，无意传播或倡导任何违反法律法规的行为。在此声明：用户须自行了解所在地法律法规，合法合规使用；因使用不当产生的法律责任，与本站及作者无关；请在使用前仔细阅读本声明，继续使用即视为同意以上条款。</p>
+                    <p>
                                                 <a href="/">首页</a> |
                                                 <a href="/free-nodes/">免费节点</a> |
                                                 <a href="/paid-subscribe/">推荐机场</a> |
@@ -326,7 +327,7 @@
                         <a href="/privacy.htm">隐私申明</a> |
                         <a href="/sitemap.xml">网站地图</a>
                     </p>
-                    <p class="copyright_text">
+                                        <p class="copyright_text">
                             VPN百科 订阅教程网 版权所有
                             <br />
                             Powered by WordPress
